style and layout

--- a/_views/default.html
+++ b/_views/default.html
@@ -1,12 +1,7 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>[% asset.title | html %]</title>
-  </head>
-  <body>
-    <h1>[% asset.title | html %]</h1>
-    [% asset.content %]
-    <p>This view has been automatically created.  Please edit  '/Users/guido/qgoda/photo-calendar/_views/default.html' to your needs!</p>
-  </body>
-</html>
+[%- PROCESS functions/setup.tt -%]
+[%- body = PROCESS "partials/body.html" %]
+[%- head = PROCESS "partials/head.html" %]
+[%- WRAPPER wrappers/html5.html %]
+[%- head %]
+[% body %]
+[% END %]
